2016-08-23  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/plots/__init__.py(get_subplot_arrangement):

	- Added a function to calculate a
	perhaps-not-entirely-optimal-but-still-acceptable subplot arrangement
	depending on how many subplots are to be arranged.

	* typhon/datasets/tovs.py(HIRS._read):

	- Check whether times make sense.  Raise error if they don't.

2016-08-18  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/geodesy/__init__.py:

	Added functions to calculate grate-circle distance, and geographical mean
	of coordinates.

2016-08-18  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/cm/__init__.py:

	Added functions to export matplotlib colormaps to txt and cpt files.

2016-08-17  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/utils/cache.py:

	- Add warning on memory usage, as this one keeps a copy in case an
	object is mutable

	- Add capability to suppress or clear cache on a single call

	* typhon/plots/__init__.py(plot_distribution_as_percentiles):

	- Fix bug when no label is passed

	* typhon/datasets/tovs.py:

	- Only do progressbar when sys.stdout is a terminal

	- Add workaround for numpy issue 4895.

	* typhon/datasets/_tovs_defs.py:

	- Add CPIDS for NOAA16 and 17 HIRS.

	* typhon/datasets/dataset.py(read_period):

	- Add capability for filters (arbitrary functions) in addition to
	limits (dict with boundaries), exactly like in atmlab.

	- Only do progressbar is sys.stdout is a tty.

2016-08-17  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/sensor.py: Fixed typo in __all__.

	* doc/geodesy.rst: Fixed documentation header.

2016-08-17  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/xml/__init__.py:

	Added function load_directory() to load all XML files in a given
	directory.

	* typhon/cm/_cmocean.py: Added colormap 'difference'.

	The new colormap is a variant of a blue-to-red colormap which fits the
	overall impression of the other colormaps shipped with typhon.

	* typhon/geodesy/__init__.py, typhon/thermodynamics.py:
